fix: make item title and actions visible

--- a/src/components/Item/VisualizationItem/styles/Item.module.css
+++ b/src/components/Item/VisualizationItem/styles/Item.module.css
@@ -5,11 +5,7 @@
     line-height: 20px;
 }
 .loadingCover {
-    position: absolute;
     height: 100%;
     width: 100%;
-    left: 0;
-    top: 0;
-    z-index: 100;
-    background: #ffffff;
+    margin-left: -4px;
 }
